added click event listener to haulers, and also added haulerId property to the ships element in the database

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Montserrat', 'Pacifico', cursive, sans-serif;
   background-color: #86c1f5; 
   color: #333; /* Default text color */
 }
