--- a/styles/main.css
+++ b/styles/main.css
@@ -11,13 +11,14 @@ body {
 }
 
 main {
-  max-width: 800px;
-  margin: 0 auto;
+  display: flex;
+  margin: 10px auto;
   padding: 20px;
 }
 
 section {
-  margin-bottom: 30px;
+  justify-content: center;
+  margin: 20px;
 }
 
 h2 {
